<resources>
    <string name="app_name">BedStation</string>
    <string name="menu_fragment">Menu fragment</string>
    <string name="content_fragment">Content fragment</string>
    <string name="dummy_clear_sky">Clear Sky 26.28°</string>
    <string name="dummy_date" translatable="false">08:41 pm Wed</string>
    <string name="dummy_month" translatable="false">Oct 27</string>
    <string name="logout">Logout</string>
    <string name="arabic_text" translatable="false">عربى</string>
    <string name="english_text" translatable="false">English</string>
    <string name="copy_right" translatable="false">© Copyright 2018 Royal Commission in Jubail</string>
    <string name="my_page">My Page</string>
    <string name="info">Hospital Guide</string>
    <string name="tv">Tv</string>
    <string name="internet">Internet</string>
    <string name="message">Message &amp; Notification</string>
    <string name="hospital_url">https://www.rchsp.med.sa/en/Pages/default.aspx</string>
    <string name="internet_title">No Internet Connection</string>
    <string name="internet_error">Make sure that Wi-Fi or mobile data is turned on, then try again.</string>
    <string name="ok">OK</string>
    <string name="keep_me_signed_in">KEEP ME SIGNED IN</string>
    <string name="logout_caps">LOGOUT</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="session_time_out">Session Timeout</string>
    <string name="session_message">Do you need more time?</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="login_through">Login through</string>
    <string name="login_with_bed_station_patient_id">Login with Bed Station Patient ID</string>
    <string name="login_with_patient_band">Login with Patient Band</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_patient_id">Forgot Bed Station Patient ID?</string>
    <string name="Login">Login</string>
    <string name="patient_login">Patient login</string>
    <string name="otp">Enter OTP Code</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="videos">Videos</string>
    <string name="patient_name">Patient Name :</string>
    <string name="patient_name_dummy">Mohammed</string>
    <string name="ward_number">Ward Number :</string>
    <string name="ward_number_dummy">12</string>
    <string name="room_number">Room Number :</string>
    <string name="room_number_dummy">12B</string>
    <string name="address">Address :</string>
    <string name="address_dummy">King Fahd Rd, Riyadh 12363, Saudi Arabia #167225</string>
    <string name="medical_team_information">Medical Team Information</string>
    <string name="select">Select</string>
    <string name="today_tasks">Today\'s Task</string>
    <string name="today_medicine">Today\'s medicine</string>
    <string name="dummy_medicine">Medicine</string>
    <string name="dummy_medicine_type">Medicine Type</string>
    <string name="dummy_medical_level">299.368 g/mol</string>
    <string name="dummy_pain_relief_medicine">Pain Relief Medicine</string>
    <string name="dummy_medication">Take one Capsule 5 minutes a after Breakfast, Twice Daily</string>
    <string name="dummy_medicine_effect">Effect: This combination medication is used to relieve moderate to severe pain. It contains an opioid (narcotic) pain reliever (hydrocodone) and a non-opioid pain reliever (acetaminophen). 299.368 g/mol</string>
    <string name="dummy_medicine_description">Medicine Content Description: croscarmellose sodium, crospovidone, magnesium stearate, microcrystalline cellulose, povidone, pregelatinized starch, and stearic acid</string>
    <string name="dummy_medicine_01">Medicine</string>
    <string name="dummy_medicine_type_01">Medicine Type</string>
    <string name="enter_bed_station_patient_id">Enter Bed Station Patient ID</string>
    <string name="bed_station_patient_id">Bed Station Patient ID</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="logging_in">Logging In…</string>
    <string name="internal_error">Kindly try again after sometime</string>
    <string name="server_error">There is a problem with server, Kindly try again after sometime.</string>
    <string name="service_error">There is a problem with server, Kindly try again after sometime.</string>
    <string name="server_error_title">Server Error</string>
    <string name="please_wait">Please wait…</string>
    <string name="login_title">Login</string>
    <string name="login_id_error">Please enter valid number</string>
    <string name="otp_empty">Please enter OTP Code</string>
    <string name="validating_otp">Validating OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_content"> Enter the verification code</string>
    <string name="fields_empty"> Field should not be empty</string>
    <string name="timer_content">Time remaining until the Authentication expires</string>
    <string name="request_code_again">Request Code Again</string>
    <string name="timer_count" translatable="false">%02d:%02d</string>
    <string name="timer_expired">Expired</string>
    <string name="thank_you_for_choosing_us_your_health_and_full_recovery_is_our_top_priority">Thank you for Choosing Us. Your Health and full recovery is Our Top Priority</string>
    <string name="login_success">LoggedIn Successfully</string>
    <string name="nurse_call">NURSE CALL</string>
    <string name="physician_rounding">PHYSICIAN/DOCTOR ROUNDING</string>
    <string name="physician_round">Physician Rounding</string>
    <string name="doctor_nurse_assign">DOCTOR AND NURSE ASSIGN</string>
    <string name="medicine_empty">No medicines</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="dose_time">Dose Time</string>
    <string name="quantity">Quantity</string>
    <string name="duration">Duration</string>
    <string name="days">Days</string>
    <string name="day">Day</string>
    <string name="today_meals">List of Meals</string>
    <string name="meals_empty">No meals found</string>
    <string name="nurse_visit_info">Nurse Visit Information</string>
    <string name="nurse_empty">No Nurse Assigned</string>
    <string name="doctor_empty">No Doctor Assigned</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="meal_time">Meal Time</string>
    <string name="diet_name">Diet Name</string>
    <string name="meal_name">Meal Name</string>
    <string name="meal_details">Meal Details</string>
    <string name="doctor_comments">Doctor Comments</string>
    <string name="enjoy_your_meal">Enjoy Your Meal</string>
    <string name="hyphen">-</string>
    <string name="patient_care_giver">Patient / Caregiver</string>
    <string name="valid_email">Please enter valid email</string>
    <string name="pls_select_type">Please select type</string>
    <string name="mail_shortly">You will receive mail shortly.</string>
    <string name="sms_shortly">You will receive sms shortly.</string>
    <string name="not_found_email">Email Not found</string>
    <string name="not_found_phone">Phone Number Not found</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="enter_valid_email">Please enter valid email</string>
    <string name="valid_mobile">Please enter valid mobile number</string>
    <string name="select_type">--SELECT TYPE--</string>
    <string name="enter_your_email">Enter your email id</string>
    <string name="mobile_number_hint">0542949548</string>
    <string name="find_your_patient_id">Find your Patient ID</string>
    <string name="find_your_password">Find your password</string>
    <string name="find">FIND</string>
    <string name="enter_your_email_id_or_mobile_number">Enter your email ID or mobile number</string>
    <string name="enter_your_medical_record_number">Enter your medical record number</string>
    <string name="email_is_not_registered">Email is not registered with us</string>
    <string name="snacks_name">Snacks Name</string>
    <string name="enjoy_your_snacks">Enjoy Your Snacks</string>
    <string name="care_giver">Care Giver</string>
    <string name="scheduled_examinations">Scheduled Examinations</string>
    <string name="today_medical_test">Today\'s Medical Test</string>
    <string name="laboratory">Laboratory</string>
    <string name="radiology">Radiology</string>
    <string name="special_clinic">Special Clinic</string>
    <string name="pathology">Pathology</string>
    <string name="select_a_period">Select a period</string>
    <string name="_3_months">3 Months</string>
    <string name="_6_months">6 Months</string>
    <string name="_9_months">9 Months</string>
    <string name="_1_year">1 Year</string>
    <string name="advice_hint">Please discuss these tabs with your physician for better interpretation</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="no_results">No data available</string>
    <string name="specimen_name">Specimen Name</string>
    <string name="specimen_code">Specimen Code</string>
    <string name="specimen_no">Specimen No</string>
    <string name="sample_name">Sample Name</string>
    <string name="flag">Flag</string>
    <string name="mod_date">Modification Date</string>
    <string name="status_">Status</string>
    <string name="res_type">Type</string>
    <string name="res_description">Description</string>
    <string name="test_result">Result</string>
    <string name="test_remark">Remark</string>
    <string name="res_panic">Panic</string>
    <string name="test_result_date">Exam Date</string>
    <string name="prev_result">Previous Result</string>
    <string name="hospital">Hospital </string>
    <string name="result">Result</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="app_id">Appointment ID</string>
    <string name="medical_document">Medical Document</string>
    <string name="document_request">Document Request</string>
    <string name="document_status">Document Status</string>
    <string name="personal_use">Personal Use</string>
    <string name="insurance_purpose">Insurance Purpose</string>
    <string name="patient_sitter">Patient Sitter</string>
    <string name="admission_notification">Admission Notification</string>
    <string name="delivery_leave">Delivery Leave</string>
    <string name="discharge_summary">Discharge Summary</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="documents_under_process">Documents under process</string>
    <string name="completed_documents">Completed documents</string>
    <string name="completed_local_documents">Completed local documents</string>
    <string name="send_via_email">Send via Email</string>
    <string name="submit">Submit</string>
    <string name="email_success">Your document has been sent to : </string>
    <string name="email_fail">Failed to send email</string>
    <string name="operation_info">Operation Information</string>
    <string name="medical_team">Medical Team</string>
    <string name="are_you_sure_you_want_to_login_to_doctor_rounding_page">Are you sure you want to login to Doctor Rounding Page?</string>
</resources>