<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_background_corner">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_margin_half"
            android:layout_marginBottom="@dimen/activity_margin_half"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/view_margin_half"
                android:gravity="start"
                android:text="@string/document_request"
                android:textColor="@color/black"
                android:textDirection="locale"
                android:textSize="@dimen/text_size_large" />

            <include layout="@layout/layout_border" />

            <RadioGroup
                android:id="@+id/group_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/personal_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin_half"
                    android:padding="@dimen/view_margin_half"
                    android:text="@string/personal_use"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

                <RadioButton
                    android:id="@+id/insurance_use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/view_margin_half"
                    android:padding="@dimen/view_margin_half"
                    android:text="@string/insurance_purpose"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_normal" />

            </RadioGroup>

            <include layout="@layout/layout_border" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:layout_marginBottom="@dimen/activity_margin_half"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <CheckBox
                        android:id="@+id/patient_sitter"
                        style="@style/CheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/patient_sitter"
                        android:textSize="@dimen/text_size_medium" />

                    <CheckBox
                        android:id="@+id/admission_notification"
                        style="@style/CheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/admission_notification"
                        android:textSize="@dimen/text_size_medium" />

                    <CheckBox
                        android:id="@+id/delivery_leave"
                        style="@style/CheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delivery_leave"
                        android:textSize="@dimen/text_size_medium" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <CheckBox
                        android:id="@+id/discharge_summary"
                        style="@style/CheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/discharge_summary"
                        android:textSize="@dimen/text_size_medium" />

                    <CheckBox
                        android:id="@+id/sick_leave"
                        style="@style/CheckBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sick_leave"
                        android:textSize="@dimen/text_size_medium" />
                </LinearLayout>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/menu_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include layout="@layout/layout_border" />

            <Button
                android:id="@+id/request_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_margin_half"
                android:background="@drawable/button_primary"
                android:drawableStart="@drawable/ic_medical_document_request"
                android:drawablePadding="@dimen/view_margin_half"
                android:gravity="center"
                android:padding="@dimen/view_margin_half"
                android:text="@string/document_request"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>