<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/alert_dialog_min_height"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:gravity="center"
            android:text="@string/are_you_sure_you_want_to_login_to_doctor_rounding_page"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_margin"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/yes"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_month_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@drawable/button_secondary"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/yes"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />


            <Button
                android:id="@+id/no"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_month_height"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/view_margin"
                android:layout_marginEnd="@dimen/view_margin"
                android:background="@drawable/button_gray"
                android:gravity="center"
                android:padding="@dimen/padding_medium"
                android:text="@string/no"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_medium" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>